--- a/templates/admin/adminHome.html.twig
+++ b/templates/admin/adminHome.html.twig
@@ -1,14 +1,7 @@
-{# templates/admin/dashboard.html.twig #}
+{# {% include "admin\adminHome.html.twig" %} #}
+{% trans_default_domain('budgetmanager') %}
 
-    {% extends "@EasyAdmin/page/content.html.twig" %}
-
-    {% block page_content %}
-
-        {% include "@Ssi/admin/logs.html.twig" %}
-
-    {% endblock %}
-
-    <div class= "container-fluid">
+<div class= "container-fluid">
     <div class="row">
         <div class="col">
             <div class="card">
