--- a/templates/comptes/logoExchange/index.html.twig
+++ b/templates/comptes/logoExchange/index.html.twig
@@ -13,8 +13,8 @@
 
     This friendly message is coming from crypto Bundle:
     <ul>
-        <li>Your controller at <code><a href="{{ 'D:/Developpement/crypto_alien/src/Controller/LogoController.php'|file_link(0) }}">src/Controller/LogoController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/Developpement/crypto_alien/templates/logo/index.html.twig'|file_link(0) }}">templates/logo/index.html.twig</a></code></li>
+        <li>Your controller at <code><a href="{{ 'D:/Developpement/crypto_alien/src/Controller/LogoExchangeController.php'|file_link(0) }}">src/Controller/LogoExchange.php</a></code></li>
+        <li>Your template at <code><a href="{{ 'D:/Developpement/crypto_alien/templates/logoExchange/index.html.twig'|file_link(0) }}">templates/logoExchange/index.html.twig</a></code></li>
     </ul>
 </div>
 {% endblock %}
