travail sur structure template/admin

--- a/templates/admin/adminHome.html.twig
+++ b/templates/admin/adminHome.html.twig
@@ -1,5 +1,5 @@
 {# {% include "admin\adminHome.html.twig" %} #}
-{% trans_default_domain('budgetmanager') %}
+{% trans_default_domain('cryptomanager') %}
 
 <div class= "container-fluid">
     <div class="row">
