--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -15,10 +15,10 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col">
-                            <div class="card">toto</div>
+                            <div class="card">ETH</div>
                         </div> 
                         <div class="col">
-                            <div class="card">titi</div>
+                            <div class="card">BTC</div>
                         </div>
                     </div>
                 </div>  
