--- a/templates/default/default.html.twig
+++ b/templates/default/default.html.twig
@@ -7,19 +7,19 @@
     {% if is_granted("ROLE_USER")  %}
         {{ renderNavBar('main') }} 
     {% endif %}
-    {% if is_granted("ROLE_USER")  %}
+    {# {% if is_granted("ROLE_USER")  %}
         {{ renderNavBar('sidebar') }} 
-    {% endif %}
+    {% endif %} #}
 
     <div class="container-fluid">
         <div class="row ml-0 pl-0">
-            <div class="col-md-1">
-                {% block sideMenu %}
-                    {% include "menu/menu.html.twig" %}
+            {# <div class="col-md-1"> #}
+                {# {% block sideMenu %} #}
+                    {# {% include "menu/menu.html.twig" %} #}
                 {# {% endblock sideMenu %} #}
-            </div>
+            {# </div> #}
 
-            <div class="col-md-11">
+            <div class="col-md-12">
                 <div class="card">
                     {% block main %}
                         <h1>Cryptomonnaie - Day Taux</h1>
@@ -111,5 +111,5 @@
         </footer>
     </div>
 {% endblock %}
-{# {% block stylesheets %}{% endblock %}
-{% block javascripts %}{% endblock %} #}
+{% block stylesheets %}{% endblock %}
+{% block javascripts %}{% endblock %}
