--- a/templates/sideBard/sidebard.html.twig
+++ b/templates/sideBard/sidebard.html.twig
@@ -15,7 +15,7 @@
                             <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
                         </a>
                     </li>
-                    <li>
+                    {# <li>
                         <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
                         <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
@@ -26,12 +26,12 @@
                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Individuel</span> 2 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> #}
                     <li>
                         <a href="#" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Orders</span></a>
                     </li>
-                    <li>
+                    {# <li>
                         <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
                             <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Gain</span></a>
                         <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
@@ -44,8 +44,8 @@
                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">SmartContrat</span> 4</a>
                             </li>
                         </ul>
-                    </li>
-                    <li>
+                    </li> #}
+                    {# <li>
                         <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Comptes</span> </a>
                             <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
@@ -62,14 +62,14 @@
                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Compte 4</span> 4</a>
                             </li>
                         </ul>
-                    </li>
+                    </li> #}
                     <li>
                         <a href="#" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">new 1</span> </a>
                     </li>
                 </ul>
                 <hr>
-                <div class="dropdown pb-4">
+                {# <div class="dropdown pb-4">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="d-none d-sm-inline mx-1">Figures</span>
                     </a>
@@ -82,7 +82,8 @@
                             <hr class="dropdown-divider">
                         </li>
                     </ul>
-                <div class="dropdown pb-4">
+                </div> #}
+                {# <div class="dropdown pb-4">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="d-none d-sm-inline mx-1">Opération</span>
                     </a>
@@ -95,8 +96,8 @@
                             <hr class="dropdown-divider">
                         </li>
                     </ul>
-                </div>
-                <div class="dropdown pb-4">
+                </div> #}
+                {# <div class="dropdown pb-4">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="d-none d-sm-inline mx-1">Administration</span>
                     </a>
@@ -107,8 +108,8 @@
                             <hr class="dropdown-divider">
                         </li>
                     </ul>
-                </div>
-                <div class="dropdown pb-4">
+                </div> #}
+                {# <div class="dropdown pb-4">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="d-none d-sm-inline mx-1">Paramétre</span>
                     </a>
@@ -121,7 +122,7 @@
                             <hr class="dropdown-divider">
                         </li>
                     </ul>
-                </div>
+                </div> #}
             </div>
         </div>
         <div class="col py-3">
