--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,10 +8,11 @@
         <meta name="author" content="Philippe.basuyau" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     
+    
         <title>Crypto - 
             {% block title %}Geronimo{% endblock %}
         </title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="icon" type="image/png" href="{{ asset('bundles/crypto/images/LogoImperium/logo50.png') }}">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {# {{ renderLibs() }} #}
 
@@ -30,16 +31,14 @@
                 {{ renderNavBar('sidebar') }} 
             {% endif %}
 
-            {# {{ renderNavBar('main') }} #}
-        
             {% block sideMenu %}{% endblock %}
             {% block main %}{% endblock %}
 
         {% endblock %}
 
-        {# {% block javascripts %}
+        {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
-        {% endblock %} #}
+        {% endblock %}
 
     </body>
 
