--- a/templates/default/default.html.twig
+++ b/templates/default/default.html.twig
@@ -7,103 +7,89 @@
     {% if is_granted("ROLE_USER")  %}
         {{ renderNavBar('main') }} 
     {% endif %}
-
-    <div class="container-fluid">
-        <div class="row ml-0 pl-0">
-            <div class="col-md-1">
-                {# {% include "../sidebar/sidebar.html.twig" %} #}
-            </div>
-
-            <div class="col-md-11">
-                <div class="card">
-                    {% block main %}
-                        <h1>Cryptomonnaie - Day Taux</h1>
-                        <div class="row">
-                            <div class="col-12">
-                                {# <img src="/public/images/banner01.jpeg" alt=""> #}
-                                <img class="img-fluid  mb-3 mt-0" src="{{ asset('bundles/crypto/images/banner/coinBannerBlue.jpeg') }}" alt="coinBannerBlue">
-                            </div>
+    <div class="wrapper">
+        <div class="container-fluid" style="background-image:url('{{ asset('bundles/crypto/images/fond/texture2.jpg') }}')">
+            {# <div class="container p-0" style="background-image:url('{{ asset('bundles/crypto/images/fond/texture2.jpg') }}')"> #}
+            <div class="col-12">
+                <div class="row">
+                        <div class="col-1 p-0 m-0" id="menuSideBarFix">
+                            {% block sidebar %}
+                                {% include "@Crypto/sidebar/sidebar.html.twig" %}
+                            {% endblock %}
                         </div>
-                        <div class="row">
+                        <div class="col-11">
                             <div class="col-12">
-                                <img class="img-fluid  mb-3 mt-0" src="{{ asset('bundles/crypto/images/fond/fondTechBlue.jpeg') }}" alt="fondTechBlue">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <img class="img-fluid  mb-3 mt-0" src="{{ asset('bundles/crypto/images/banner/bannerBTCGray.webp') }}" alt="bannerBTCGray">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <img class="img-fluid  mb-3 mt-0" src="{{ asset('bundles/crypto/images/neon/exchangeNeon.webp') }}" alt="exchangeNeon">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <img class="img-fluid  mb-3 mt-0" src="{{ asset('bundles/crypto/images/fond/japanChandelleCiel.jpeg') }}" alt="japanChandelleCiel">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <img class="img-fluid  mb-3 mt-0" src="{{ asset('bundles/crypto/images/neon/miningNeom.webp') }}" alt="miningNeom">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="card-deck">
-                                <div class="row">
-                                    <div class="col-4">
-                                        <div class="card">
-                                            {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
-                                            <div class="card-body">
-                                                {# <h4 class="card-title">Title</h4> #}
-                                                <p class="card-text">
-                                                    <script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
-                                                    <coingecko-coin-ticker-widget  coin-id="bitcoin" currency="eur" locale="fr"></coingecko-coin-ticker-widget>
-                                                </p>
+                            <div class="row">
+                                    {# <div class="card border-0"> #}
+                                        {% block main %}
+                                            <div class="p-0">
+                                                <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
+                                                <coingecko-coin-price-marquee-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" background-color="#ffffff" locale="fr"></coingecko-coin-price-marquee-widget>
                                             </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-4">
-                                        <div class="card">
-                                            {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
-                                            <div class="card-body">
-                                                {# <h4 class="card-title">Title</h4> #}
-                                                <p class="card-text">
-                                                    <script src="https://widgets.coingecko.com/coingecko-coin-list-widget.js"></script>
-                                                    <coingecko-coin-list-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-list-widget>
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-4">
-                                    </div>
+                                                <h1 class="text-light">Cryptomonnaie - Day Taux</h1>
+                                                
+                                                <div class="row">
+                                                    <div class="card-deck">
+                                                        <div class="row">
+                                                            <div class="col-4">
+                                                                <div class="card">
+                                                                    {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
+                                                                    <div class="card-body">
+                                                                        {# <h4 class="card-title">Title</h4> #}
+                                                                        <p class="card-text">
+                                                                            <script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
+                                                                            <coingecko-coin-ticker-widget  coin-id="bitcoin" currency="eur" locale="fr"></coingecko-coin-ticker-widget>
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-4">
+                                                                <div class="card">
+                                                                    {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
+                                                                    <div class="card-body">
+                                                                        {# <h4 class="card-title">Title</h4> #}
+                                                                        <p class="card-text">
+                                                                            <script src="https://widgets.coingecko.com/coingecko-coin-list-widget.js"></script>
+                                                                            <coingecko-coin-list-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-list-widget>
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-4">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                //--
+                                                    <script src="https://widgets.coingecko.com/coingecko-coin-heatmap-widget.js"></script>
+                                                    <coingecko-coin-heatmap-widget  height="400" locale="fr"></coingecko-coin-heatmap-widget>
+                                                //---
+                                                    //---
+                                                    <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
+                                                    <coingecko-coin-price-marquee-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" background-color="#ffffff" locale="fr"></coingecko-coin-price-marquee-widget>
+                                                //---
+                                                    <script src="https://widgets.coingecko.com/coingecko-coin-compare-chart-widget.js"></script>
+                                                    <coingecko-coin-compare-chart-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-compare-chart-widget>
+                                                //---
+                                                    <script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
+                                                    <coingecko-coin-price-static-headline-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-price-static-headline-widget>
+                                                //---
+                                        {% endblock main %}
+                                    {# </div> #}
                                 </div>
                             </div>
+                            </div>
                         </div>
-                        //--
-                            <script src="https://widgets.coingecko.com/coingecko-coin-heatmap-widget.js"></script>
-                            <coingecko-coin-heatmap-widget  height="400" locale="fr"></coingecko-coin-heatmap-widget>
-                        //---
-                            //---
-                            <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
-                            <coingecko-coin-price-marquee-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" background-color="#ffffff" locale="fr"></coingecko-coin-price-marquee-widget>
-                        //---
-                            <script src="https://widgets.coingecko.com/coingecko-coin-compare-chart-widget.js"></script>
-                            <coingecko-coin-compare-chart-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-compare-chart-widget>
-                        //---
-                            <script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
-                            <coingecko-coin-price-static-headline-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-price-static-headline-widget>
-                        //---
-                    {% endblock main %}
+                    </div>
                 </div>
             </div>
+
+            <div class="row footer bg-dark">
+                <footer class="col-sm-12" style="text-align: center;">
+                    <p class="text-light mt-1">Cryptomonnaies - Philippe Basuyau &copy; Imperium Clan Software</p>
+                </footer>
+            </div>
         </div>
-    </div>
-    <div class="row footer">
-        <footer class="col-sm-12 mt-2 mb-2" style="text-align: center;">
-            <p>Cryptomonnaies - Philippe Basuyau &copy; Imperium Clan Software</p>
-        </footer>
     </div>
 {% endblock %}
 {% block stylesheets %}{% endblock %}
