--- a/templates/default/default.html.twig
+++ b/templates/default/default.html.twig
@@ -1,18 +1,20 @@
 {% extends 'base.html.twig' %}
+{% trans_default_domain("crypto") %}
 
 {% block title %}Homepage Cryptomonnaie{% endblock %}
 
 {% block body %}
+
+
 
     {% if is_granted("ROLE_USER")  %}
         {{ renderNavBar('main') }} 
     {% endif %}
     <div class="wrapper">
         <div class="container-fluid" style="background-image:url('{{ asset('bundles/crypto/images/fond/texture2.jpg') }}')">
-            {# <div class="container p-0" style="background-image:url('{{ asset('bundles/crypto/images/fond/texture2.jpg') }}')"> #}
             <div class="col-12">
                 <div class="row">
-                        <div class="col-1 p-0 m-0" id="menuSideBarFix">
+                        <div class="col-1 p-0 m-0 " id="menuSideBarFix">
                             {% block sidebar %}
                                 {% include "@Crypto/sidebar/sidebar.html.twig" %}
                             {% endblock %}
@@ -22,11 +24,11 @@
                             <div class="row">
                                     {# <div class="card border-0"> #}
                                         {% block main %}
-                                            <div class="p-0">
+                                            <div class="p-0 sticky-top shadows" style="top:56px;">
                                                 <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
                                                 <coingecko-coin-price-marquee-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" background-color="#ffffff" locale="fr"></coingecko-coin-price-marquee-widget>
                                             </div>
-                                                <h1 class="text-light">Cryptomonnaie - Day Taux</h1>
+                                                <h1 class="text-light text-center">Cryptomonnaie - Day Taux</h1>
                                                 
                                                 <div class="row">
                                                     <div class="card-deck">
