travaux sur les views:  les 100 crypto  &  information

--- a/templates/default/construction.html.twig
+++ b/templates/default/construction.html.twig
@@ -1,6 +1,6 @@
 {# Page avec affichage en travaux ou en construction #}
-{% extends 'default.html.twig' %}
+{% extends '@Crypto/default/default.html.twig' %}
 
 {% block main %}
-    <h1>TOTO</h1>
+    <h1 class="text-center text-light mt-4">En cours d'élaboration...</h1>
 {% endblock %}
