--- a/templates/sidebar/sidebar.html.twig
+++ b/templates/sidebar/sidebar.html.twig
@@ -16,7 +16,8 @@
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-graduation-cap"></i> Earn</a>
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fab fa-superpowers"></i> SuperCharge</a>
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-file-contract"></i> SmartContrat</a>
-        <a href="{{path('ics_crypto_comptes_compte_homepage')}}" class="list-group-item"><i class="fa fa-info-circle"></i> Information</a>
+        <a href="{{path('ics_crypto_information')}}" class="list-group-item"><i class="fa fa-info-circle"></i> Information</a>
+        <a href="{{path('ics_crypto_capitalisation')}}" class="list-group-item"><i class="fa fa-info"></i> Les 100 cryptos</a>
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-file-import"></i> Import</a>
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-file-export"></i> Export</a>
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-user-cog"></i> Admin</a>
