--- a/templates/default/default.html.twig
+++ b/templates/default/default.html.twig
@@ -5,16 +5,15 @@
 
 {% block body %}
 
-
-
     {% if is_granted("ROLE_USER")  %}
         {{ renderNavBar('main') }} 
     {% endif %}
+
     <div class="wrapper">
-        <div class="container-fluid" style="background-image:url('{{ asset('bundles/crypto/images/fond/texture2.jpg') }}')">
+        <div class="container-fluid" style="background-image:url('{{ asset('bundles/crypto/images/fond/texture2.jpg') }}'); height: 830px;">
             <div class="col-12">
                 <div class="row">
-                        <div class="col-1 p-0 m-0 " id="menuSideBarFix">
+                        <div class="col-1 p-0 m-0 " >
                             {% block sidebar %}
                                 {% include "@Crypto/sidebar/sidebar.html.twig" %}
                             {% endblock %}
@@ -22,62 +21,11 @@
                         <div class="col-11">
                             <div class="col-12">
                             <div class="row">
-                                    {# <div class="card border-0"> #}
-                                        {% block main %}
-                                            <div class="p-0 sticky-top shadows" style="top:56px;">
-                                                <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
-                                                <coingecko-coin-price-marquee-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" background-color="#ffffff" locale="fr"></coingecko-coin-price-marquee-widget>
-                                            </div>
-                                                <h1 class="text-light text-center">Cryptomonnaie - Day Taux</h1>
-                                                
-                                                <div class="row">
-                                                    <div class="card-deck">
-                                                        <div class="row">
-                                                            <div class="col-4">
-                                                                <div class="card">
-                                                                    {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
-                                                                    <div class="card-body">
-                                                                        {# <h4 class="card-title">Title</h4> #}
-                                                                        <p class="card-text">
-                                                                            <script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
-                                                                            <coingecko-coin-ticker-widget  coin-id="bitcoin" currency="eur" locale="fr"></coingecko-coin-ticker-widget>
-                                                                        </p>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-4">
-                                                                <div class="card">
-                                                                    {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
-                                                                    <div class="card-body">
-                                                                        {# <h4 class="card-title">Title</h4> #}
-                                                                        <p class="card-text">
-                                                                            <script src="https://widgets.coingecko.com/coingecko-coin-list-widget.js"></script>
-                                                                            <coingecko-coin-list-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-list-widget>
-                                                                        </p>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-4">
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                //--
-                                                    <script src="https://widgets.coingecko.com/coingecko-coin-heatmap-widget.js"></script>
-                                                    <coingecko-coin-heatmap-widget  height="400" locale="fr"></coingecko-coin-heatmap-widget>
-                                                //---
-                                                    //---
-                                                    <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
-                                                    <coingecko-coin-price-marquee-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" background-color="#ffffff" locale="fr"></coingecko-coin-price-marquee-widget>
-                                                //---
-                                                    <script src="https://widgets.coingecko.com/coingecko-coin-compare-chart-widget.js"></script>
-                                                    <coingecko-coin-compare-chart-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-compare-chart-widget>
-                                                //---
-                                                    <script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
-                                                    <coingecko-coin-price-static-headline-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin,apecoin" currency="eur" locale="fr"></coingecko-coin-price-static-headline-widget>
-                                                //---
-                                        {% endblock main %}
-                                    {# </div> #}
+                                <div class="p-0 sticky-top shadows" style="top:56px;">
+                                    <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
+                                    <coingecko-coin-price-marquee-widget  coin-ids="bitcoin,ethereum,decentraland,polkadot,solana,ripple,litecoin,apecoin" currency="eur" background-color="#ffffff" locale="fr"></coingecko-coin-price-marquee-widget>
+                                </div>
+                                    {% block main %}{% endblock main %}
                                 </div>
                             </div>
                             </div>
