Mise en place de la page en travaux ou  en construction

--- a/templates/default/construction.html.twig
+++ b/templates/default/construction.html.twig
@@ -3,4 +3,8 @@
 
 {% block main %}
     <h1 class="text-center text-light mt-4">En cours d'élaboration...</h1>
+
+    <div class="text-center mt-4" style="height: 400px;">
+        <img src="{{ asset('bundles/crypto/images/travaux/travaux.jpg') }}" alt="en travaux">
+    </div>
 {% endblock %}
