Correction dans les controllers . Travaux sur le dashboard

--- a/templates/sidebar/sidebar.html.twig
+++ b/templates/sidebar/sidebar.html.twig
@@ -8,7 +8,7 @@
         Crypto
     </h5>
     <nav>
-        <a href="{{path('ics_crypto_homepage')}}" class="list-group-item"><i class="fas fa-tachometer-alt"></i>  Dashboard</a>
+        <a href="{{path('ics_crypto_dashboard')}}" class="list-group-item"><i class="fas fa-tachometer-alt"></i>  Dashboard</a>
         <a href="{{path('ics_crypto_comptes_compte_homepage')}}" class="list-group-item"><i class="fa fa-list"></i> Comptes</a>
         <a href="{{path('ics_crypto_calcul_operation_homepage')}}" class="list-group-item"><i class="fas fa-calculator"></i> Opération</a>
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-chart-line"></i> Chart</a>
