--- a/templates/comptes/logoExchange/index.html.twig
+++ b/templates/comptes/logoExchange/index.html.twig
@@ -1,20 +1,10 @@
-{% extends 'base.html.twig' %}
+{# affichage Logo des comptes #}
+{% extends '@Crypto/default/default.html.twig' %}
+{% trans_default_domain("crypto") %}
 
-{% block title %}Hello LogoController!{% endblock %}
+{% block title %}Crypto - Logos Exchanges{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from crypto Bundle:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/Developpement/crypto_alien/src/Controller/LogoExchangeController.php'|file_link(0) }}">src/Controller/LogoExchange.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/Developpement/crypto_alien/templates/logoExchange/index.html.twig'|file_link(0) }}">templates/logoExchange/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% block main %}
+    <h1 class="text-center text-light">Logo des exchanges</h1>
 {% endblock %}
+
