Mise en place du datetime Picker. Mise en place de la homepage Compte, du Form et de divers découpes dans élèment Compte concenrant la homepage compte

--- a/public/css/crypto.css
+++ b/public/css/crypto.css
@@ -1,7 +1,13 @@
 /* Crypto stylesheet file */
 
 /* Class */
-
+.fondForm{
+    /* background-color: #C0C0C0; */
+    /* background-color: #808080; */
+    /* background-color: #696969; */
+    background-color: #778899;
+    /* background-color: #708090; */
+}
 /* id */
 
 
