--- a/templates/sidebar/sidebar.html.twig
+++ b/templates/sidebar/sidebar.html.twig
@@ -2,7 +2,7 @@
 {# {% include 'sideBard/sidebard.html.twig' %} #}
 {% trans_default_domain("crypto") %}
 
-<div class="card nav nav-pills nav-stacked sticky-top shadow rounded-0 side-menu" style="top:56px; "id="menuSideBarFix">
+<div class="card nav nav-pills nav-stacked sticky-top shadow rounded-0 side-menu" style="position:fixed ;top:56px;">
     <h5 class="card-header alert-primary" style="opacity: 0.7; ">
         <span class="fab fa-btc br-4"></span> 
         Crypto
@@ -23,4 +23,3 @@
         <a href="{{path('ics_crypto_construction')}}" class="list-group-item"><i class="fas fa-user-cog"></i> Admin</a>
     </nav>
 </div>
-ics_crypto_comptes_compte_homepage
