--- a/templates/information/infoChart.html.twig
+++ b/templates/information/infoChart.html.twig
@@ -7,7 +7,7 @@
         <div class="card-deck">
             <div class="row">
                 <div class="col-4">
-                    <div class="card">
+                    <div class="card h-100">
                         {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
                         <div class="card-body">
                             <h4 class="card-title">Favoris</h4>
@@ -17,7 +17,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card mt-4">
+                    <div class="card h-100">
                         {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
                         <div class="card-body">
                             <h4 class="card-title">Outsider</h4>
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card mt-3 mb-4">
+                    <div class="card h-100 mb-4">
                         {# <img class="card-img-top" src="holder.js/100x180/" alt=""> #}
                         <div class="card-body">
                             {# <h4 class="card-title">Title</h4> #}
