--- a/templates/comptes/compte/elements/littleCardCompte.html.twig
+++ b/templates/comptes/compte/elements/littleCardCompte.html.twig
@@ -1,21 +1,23 @@
 {# Petite Card  pour Compte index #}
 {# {% include '@Crypto/comptes/compte/elements/littleCardCompte.html.twig' %} #}
-{% trans_default_domain("crypto") %}
+{# {% trans_default_domain("crypto") %} #}
 
 {# <div class="card col-12 mb-3" style="max-width: 680px;"> #}
+{% set cryptoBg = "" %}
+{% if compte.fondGarantie == false %}
+    {% set cryptoBg = 'bg-warning' %}
+{% endif %}
 <div class="card col-12 mb-3">
+
     <div class="row g-0">
-        <div class="col-md-4">
+        <div class="col-md-5 p-0 m-0 {{cryptoBg}}">
             {# <img class="img-fluid rounded-start shadow-lg"  style="max-width: 100px;" src="{{ asset('bundles/crypto/images/logoExchange/cryptocom.jpeg') }}" alt="L'exchange cryptocom"> #}
             <img class="img-fluid rounded-start shadow-lg" src="{{ asset('bundles/crypto/images/logoExchange/cryptocom.jpeg') }}" alt="L'exchange cryptocom">
         </div>
 
         {# -----------  faire un set  ------------------  #}
-        {% set cryptoBg = "" %}
-        {% if compte.fondGarantie == false %}
-            {% set cryptoBg = 'bg-warning' %}
-        {% endif %}
-            <div class="col-md-8 {{cryptoBg}}">
+        
+            <div class="col-md-7 {{cryptoBg}}">
                 <div class="card-body"> 
                     <h4 class="card-title col-12 text-center">{{compte.nameCompte}}</h4>
                     <div class="row">
@@ -64,8 +66,8 @@
                             <div class="col-12 text-center">
                                 <div class="container-fluid">
                                     <div class="btn btn-group fixed-right">
-                                        <a class="shadow mb-1 btn btn-warning bg-gradient" href="{{path('ics_crypto_comptes_compte_edit')}}">{{ button_label|default('Modifier compte') }}</a>
-                                        <a class="shadow mb-1 btn btn-danger bg-gradient" href="{{path('ics_crypto_comptes_compte_delete')}}">{{ button_label|default('Cloturer compte') }}</a>
+                                        <a class="shadow btn btn-warning bg-gradient" href="{{path('ics_crypto_comptes_compte_edit')}}">{{ button_label|default('Modifier compte') }}</a>
+                                        <a class="shadow btn btn-danger bg-gradient" href="{{path('ics_crypto_comptes_compte_delete')}}">{{ button_label|default('Cloturer compte') }}</a>
                                     </div>
                                 </div>
                             </div> 
