--- a/templates/comptes/compte/index.html.twig
+++ b/templates/comptes/compte/index.html.twig
@@ -28,24 +28,31 @@
                 <h1 class="display-4 text-center">Comptes</h1>
                 {% if comptes %}
                     <div class="row">
-                        <div class="card">
+                        {# <div class="card"> #}
                             <div class="card-body">
-                                <div class="jumbotron">
+                                {# <div class="jumbotron"> #}
                                     <div class="container-fluid">
                                         <div class="row">
                                             <div class="col-12">
                                                     <div class="card-deck">
-                                                            {# {% for compte in comptes|batch(2, "null") %} #}
-                                                            {% for compte in comptes %}
-                                                                {% include '@Crypto/comptes/compte/elements/littleCardCompte.html.twig' %}
+                                                        <div class="col-12 mb-3">
+                                                            {% for cpt in comptes|batch(2, null) %}
+                                                                <div class="row">
+                                                                    {% for compte in cpt %}
+                                                                        <div class="col-6">
+                                                                            {% include '@Crypto/comptes/compte/elements/littleCardCompte.html.twig' %}
+                                                                        </div>
+                                                                    {% endfor %}
+                                                                </div>
                                                             {% endfor %}
+                                                        </div>
                                                     </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                {# </div> #}
                             </div>
-                        </div>
+                        {# </div> #}
                     </div>
                 {% else %}
                     {% include '@Crypto/comptes/compte/elements/notCompte.html.twig' %}
